# goback

./: .bazelrc  .gitignore  AGENTS.md  BAZEL.md  BAZEL_MIGRATION.md  BUILD.bazel  CLAUDE.md  DEVELOPERS.md  MODULE.bazel  Makefile  README.md  TESTING.md  TODO.md  WORKSPACE  config.go  go.mod  go.sum  ipmi.go  main.go  server-config.yaml  workspace_status.sh
.cursor/: INSTRUCTIONS.md
activities/: backup_dirs.go  backup_vms.go  error.go  metrics.go  metrics_test.go  power_off_pbs.go  power_on_pbs.go  run_proxmox_backup.go
activity/: BUILD.bazel  capture_error.go  capture_error_test.go  doc.go  status_handler.go  status_handler_test.go  status_line.go  status_line_test.go
backup/: workflows.go
backup/activities/: backup_dirs.go  backup_vms.go  power_off_pbs.go  power_off_pbs_test.go  power_on_pbs.go
buildinfo/: BUILD.bazel  buildinfo.go
cfg/: prod.yaml  test.yaml
clients/ipmiclient/: BUILD.bazel  ipmi.go  ipmi_test.go  power_state.go  power_state_test.go  runner.go
clients/pbsclient/: BUILD.bazel  client.go  client_test.go
clients/proxmoxclient/: BUILD.bazel  client.go  client_test.go  types.go
clients/sshclient/: BUILD.bazel  sshclient.go
cmd/cli/: BUILD.bazel  main.go
cmd/power_off/: BUILD.bazel  main.go
cmd/server/: BUILD.bazel  main.go
config/: BUILD.bazel  config.go  config_test.go
ipmi/: ipmi.go  ipmi_test.go  power_state.go  power_state_test.go
logging/: BUILD.bazel  capturing_handler.go  capturing_handler_test.go  log_collector.go  log_collector_test.go  logger.go  logger_hook.go  logger_hook_test.go  logger_test.go
metrics/: BUILD.bazel  interfaces.go  metrics.go  metrics_test.go  push.go  scrape.go
orchestrator/: activity_id.go  activity_id_test.go  activity_state.go  doc.go  orchestrator.go  orchestrator_test.go  types.go
pbsclient/: client.go  client_test.go
power_off/: main.go
proxmoxclient/: client.go  client_test.go  types.go
server/: BUILD.bazel  README.md  cert_loader.go  properties.go  server.go
server/config/: BUILD.bazel  config.go
server/cron/: BUILD.bazel  manager.go  manager_test.go  parser.go  parser_test.go  trigger.go  trigger_test.go
server/handlers/: BUILD.bazel  api_status.go  available_workflows.go  config.go  config_test.go  health.go  health_test.go  history.go  interfaces.go  ipmi.go  power.go  reload.go  reload_test.go  results.go  run.go  run_status.go  status_test.go  store_reload.go  util.go
server/runner/: BUILD.bazel  disk_store.go  disk_store_test.go  mem_store.go  mem_store_test.go  runner.go  store.go  types.go
server/static/: index.html
server/types/: BUILD.bazel  types.go
statusreporter/: collection.go  error_recorder.go  status_line.go  status_reporter.go  status_reporter_test.go
systemd/: goback-server.service
workflow/: BUILD.bazel  activity_id.go  activity_id_test.go  activity_state.go  doc.go  orchestrator.go  orchestrator_test.go  types.go  workflow.go
workflows/: BUILD.bazel  params.go
workflows/backup/: BUILD.bazel  backup_dirs.go  backup_vms.go  power_on_pbs.go  workflow.go
workflows/demo/: BUILD.bazel  step1.go  step2.go  step3.go  workflow.go
workflows/poweroff/: BUILD.bazel  power_off_pbs.go  workflow.go
workflows/test/: step1.go  step2.go  step3.go  workflow.go
