load("@gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/nomis52/goback
# gazelle:resolve go github.com/prometheus/prometheus/prompb @com_github_prometheus_prometheus//prompb
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

# Aliases for convenience (matching Makefile targets)
alias(
    name = "goback",
    actual = "//cmd/cli",
    visibility = ["//visibility:public"],
)

alias(
    name = "goback-server",
    actual = "//cmd/server",
    visibility = ["//visibility:public"],
)

alias(
    name = "goback-poweroff",
    actual = "//cmd/power_off",
    visibility = ["//visibility:public"],
)
