"""
Goback - PBS Backup Automation
"""

module(
    name = "goback",
    version = "0.0.0",
)

# Bazel dependencies
bazel_dep(name = "rules_go", version = "0.54.0")
bazel_dep(name = "gazelle", version = "0.41.0")

# Go SDK
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.2")

# Go dependencies
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# Override prometheus to disable proto generation
go_deps.gazelle_override(
    directives = [
        "gazelle:proto disable",
    ],
    path = "github.com/prometheus/prometheus",
)

# All direct and indirect dependencies
use_repo(
    go_deps,
    "com_github_beorn7_perks",
    "com_github_cespare_xxhash_v2",
    "com_github_davecgh_go_spew",
    "com_github_gogo_protobuf",
    "com_github_golang_protobuf",
    "com_github_golang_snappy",
    "com_github_grafana_regexp",
    "com_github_kr_text",
    "com_github_munnerz_goautoneg",
    "com_github_pmezard_go_difflib",
    "com_github_prometheus_client_golang",
    "com_github_prometheus_client_model",
    "com_github_prometheus_common",
    "com_github_prometheus_procfs",
    "com_github_prometheus_prometheus",
    "com_github_robfig_cron_v3",
    "com_github_stretchr_testify",
    "in_gopkg_yaml_v3",
    "org_golang_google_protobuf",
    "org_golang_x_crypto",
    "org_golang_x_sys",
    "org_golang_x_text",
)
